--- a/app/src/main/res/layout/activity_input_phone.xml
+++ b/app/src/main/res/layout/activity_input_phone.xml
@@ -14,6 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:orientation="vertical"
         android:paddingLeft="@dimen/dp_20"
         android:paddingRight="@dimen/dp_20">
@@ -71,10 +72,11 @@
 
         <Button
             android:id="@+id/btn_next"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
-            android:background="@drawable/bg_btn_unselected"
+            android:layout_marginTop="@dimen/dp_20"
+            android:background="@drawable/btn_selector"
+            android:enabled="false"
             android:text="下一步"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/sp_20" />
@@ -83,6 +85,7 @@
             android:id="@+id/txt_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/dp_10" />
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
