--- a/app/src/main/res/layout/fragment_home1.xml
+++ b/app/src/main/res/layout/fragment_home1.xml
@@ -4,7 +4,6 @@
     android:id="@+id/fl_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
@@ -41,22 +40,44 @@
                         android:layout_height="wrap_content" />
                 </android.support.design.widget.CollapsingToolbarLayout>
 
-                <com.flyco.tablayout.SlidingTabLayout
-                    android:id="@+id/tabs"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:background="@color/dialog_submit"
-                    app:tl_indicator_color="@color/tab_underline_color"
-                    app:tl_indicator_height="@dimen/dp_4"
-                    app:tl_indicator_margin_bottom="@dimen/dp_6"
-                    app:tl_indicator_margin_top="@dimen/dp_4"
-                    app:tl_indicator_width_equal_title="true"
-                    app:tl_tab_space_equal="true"
-                    app:tl_textBold="SELECT"
-                    app:tl_textSelectColor="@color/colorBlack"
-                    app:tl_textUnselectColor="@color/colorBlack"
-                    app:tl_textsize="@dimen/sp_16" />
+                    android:background="@color/color_gray">
+
+                    <com.flyco.tablayout.SlidingTabLayout
+                        android:id="@+id/tabs"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/dp_48"
+                        android:layout_weight="1"
+                        android:background="@color/color_gray"
+                        app:tl_indicator_color="@color/color_indicator"
+                        app:tl_indicator_height="@dimen/dp_2"
+                        app:tl_indicator_margin_bottom="@dimen/dp_6"
+                        app:tl_indicator_margin_top="@dimen/dp_4"
+                        app:tl_indicator_width_equal_title="true"
+                        app:tl_tab_padding="@dimen/dp_10"
+                        app:tl_tab_space_equal="false"
+                        app:tl_textSelectColor="@color/color_indicator"
+                        app:tl_textUnselectColor="@color/colorBlack"
+                        app:tl_textsize="@dimen/sp_16" />
+
+                    <View
+                        android:layout_width="@dimen/dp_2"
+                        android:layout_height="@dimen/dp_25"
+                        android:layout_gravity="center"
+                        android:background="@drawable/bg_white_round" />
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@null"
+                        android:padding="@dimen/dp_10"
+                        android:src="@drawable/ic_more_classify" />
+                </LinearLayout>
+
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/view_pager"
@@ -77,7 +98,6 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_marginBottom="0dp"
             android:background="@drawable/bg_toolbar"
-            android:visibility="gone"
             app:layout_collapseMode="pin">
 
             <LinearLayout
@@ -123,26 +143,48 @@
 
         </android.support.v7.widget.Toolbar>
 
-        <com.flyco.tablayout.SlidingTabLayout
-            android:id="@+id/tabs_title"
+        <LinearLayout
+            android:id="@+id/ll_title"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/toolbar"
             android:layout_gravity="bottom"
-            android:background="@color/color_tag_end"
+            android:background="@color/color_gray"
+            android:orientation="horizontal"
             android:visibility="gone"
-            app:layout_collapseMode="pin"
-            app:tl_indicator_color="@color/tab_underline_color"
-            app:tl_indicator_height="@dimen/dp_4"
-            app:tl_indicator_margin_bottom="@dimen/dp_6"
-            app:tl_indicator_margin_top="@dimen/dp_4"
-            app:tl_indicator_width="@dimen/dp_25"
-            app:tl_indicator_width_equal_title="false"
-            app:tl_tab_space_equal="true"
-            app:tl_textBold="SELECT"
-            app:tl_textSelectColor="@color/colorBlack"
-            app:tl_textUnselectColor="@color/colorBlack"
-            app:tl_textsize="@dimen/sp_16" />
+            app:layout_collapseMode="pin">
+
+            <com.flyco.tablayout.SlidingTabLayout
+                android:id="@+id/tabs_title"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dp_48"
+                android:layout_weight="1"
+                android:background="@color/color_gray"
+                app:tl_indicator_color="@color/color_indicator"
+                app:tl_indicator_height="@dimen/dp_2"
+                app:tl_indicator_margin_bottom="@dimen/dp_6"
+                app:tl_indicator_margin_top="@dimen/dp_4"
+                app:tl_indicator_width_equal_title="true"
+                app:tl_tab_padding="@dimen/dp_10"
+                app:tl_tab_space_equal="false"
+                app:tl_textSelectColor="@color/color_indicator"
+                app:tl_textUnselectColor="@color/colorBlack"
+                app:tl_textsize="@dimen/sp_16" />
+
+            <View
+                android:layout_width="@dimen/dp_2"
+                android:layout_height="@dimen/dp_25"
+                android:layout_gravity="center"
+                android:background="@drawable/bg_white_round" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@null"
+                android:padding="@dimen/dp_10"
+                android:src="@drawable/ic_more_classify" />
+        </LinearLayout>
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
