--- a/app/src/main/res/layout/activity_input_invate_info.xml
+++ b/app/src/main/res/layout/activity_input_invate_info.xml
@@ -42,7 +42,7 @@
             android:layout_marginTop="@dimen/dp_20"
             android:background="@null"
             android:hint="邀请码或邀请人手机号"
-            android:inputType="number"
+            android:inputType="text"
             android:paddingLeft="@dimen/dp_20"
             android:paddingTop="@dimen/dp_10"
             android:paddingRight="@dimen/dp_20"
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="@dimen/dp_10"
-                android:src="@drawable/ic_qq_login" />
+                android:src="@drawable/ic_zhanwei_potential_img" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -104,7 +104,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_20"
-            android:background="@drawable/bg_btn_unselected"
+            android:background="@drawable/btn_selector"
+            android:enabled="false"
             android:text="下一步"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/sp_20" />
