--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,5 +44,6 @@
     <dimen name="dp_28">28dp</dimen>
     <dimen name="dp_360">360dp</dimen>
     <dimen name="dp_230">230dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
 
 </resources>
