--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -45,5 +45,8 @@
     <dimen name="dp_360">360dp</dimen>
     <dimen name="dp_230">230dp</dimen>
     <dimen name="dp_120">120dp</dimen>
+    <dimen name="dp_50">50dp</dimen>
+    <dimen name="dp_14">14dp</dimen>
+    <dimen name="sp_8">8sp</dimen>
 
 </resources>
